--- a/mipripity_api/pubspec.yaml
+++ b/mipripity_api/pubspec.yaml
@@ -10,3 +10,14 @@ dependencies:
   shelf_router: ^1.1.3
   postgres: ^2.6.2
   test: ^1.26.2
+
+databases:
+- name: mipripity_db
+  databaseName: mipripity_app
+  user: mipripity_user
+  plan: free
+  region: frankfurt
+  ipAllowList:
+  - source: 0.0.0.0/0
+    description: everywhere
+  postgresMajorVersion: "15"
