--- a/mipripity_api/pubspec.yaml
+++ b/mipripity_api/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   shelf: ^1.4.0
   shelf_router: ^1.1.3
   postgres: ^2.6.2
+  yaml: ^3.1.2  # Added for parsing pubspec.yaml
   test: ^1.26.2
 
 databases:
