--- a/assets/.env
+++ b/assets/.env
@@ -1,23 +1,3 @@
-# Firebase Configuration
-FIREBASE_API_KEY=your_firebase_api_key
-FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
-FIREBASE_PROJECT_ID=your_project_id
-FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-FIREBASE_APP_ID=your_app_id
-FIREBASE_MEASUREMENT_ID=your_measurement_id
-
-# API Keys
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key
-
-# App Configuration
-APP_NAME=Mipripity
-APP_ENV=development
-DEBUG_MODE=true
-
-# PostgreSQL Connection
-NEON_PGHOST=localhost
-NEON_PGPORT=5432
-NEON_PGDATABASE=postgres
-NEON_PGUSER=postgres
-NEON_PGPASSWORD=FuotafUoe0sWr4IYjuSkXeZ281mMOA53
+CLOUDINARY_CLOUD_NAME=dxhrlaz6j
+CLOUDINARY_UPLOAD_PRESET=mipripity
+BASE_URL=http://10.0.2.2:8080
