--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
   # Updated Firebase dependencies for compatibility
+  supabase_flutter: ^1.10.14
+  flutter_secure_storage: ^9.2.4
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.8
-  js: ^0.7.2
+  js: ^0.6.3
   google_sign_in: ^6.1.6
   shelf: ^1.4.0
   shelf_router: ^1.1.3
@@ -48,6 +50,9 @@ dependencies:
   whatsapp_unilink: ^2.0.2
   # Added for password hashing and authentication
   crypto: ^3.0.3
+  flutter_dotenv: ^5.1.0
+  flutter_cache_manager: ^3.3.1
+  
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +71,11 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - .env
+    - assets/images/residential1.jpg
+    - assets/images/commercial1.jpg
+    - assets/images/land1.png
+    - assets/images/material1.jpg
     
   fonts:
     - family: Poppins
